infra/modules/nsg.bicep
param location string
param nsgName string
param allowedSshSource string = '*'
resource nsg 'Microsoft.Network/networkSecurityGroups@2023-09-01' = {

  name: nsgName

  location: location

  properties: {

    securityRules: [

      {

        name: 'allow-http'

        properties: {

          priority: 100

          access: 'Allow'

          direction: 'Inbound'

          protocol: 'Tcp'

          sourcePortRange: '*'

          destinationPortRange: '80'

          sourceAddressPrefix: '*'

          destinationAddressPrefix: '*'

        }

      }

      {

        name: 'allow-https'

        properties: {

          priority: 110

          access: 'Allow'

          direction: 'Inbound'

          protocol: 'Tcp'

          sourcePortRange: '*'

          destinationPortRange: '443'

          sourceAddressPrefix: '*'

          destinationAddressPrefix: '*'

        }

      }

      {

        name: 'allow-ssh'

        properties: {

          priority: 120

          access: 'Allow'

          direction: 'Inbound'

          protocol: 'Tcp'

          sourcePortRange: '*'

          destinationPortRange: '22'

          sourceAddressPrefix: allowedSshSource

          destinationAddressPrefix: '*'

        }

      }

    ]

  }

}

output nsgId string = nsg.id
